Working on Login page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,10 @@
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <div>Microblog: <a href='/index'>Home</a></div>
+    <div>Microblog: 
+      <a href='/index'>Home</a>
+      <a href='/login'>Login</a>
+    </div>
     <hr>
     {% block content %}{% endblock %}
     <script src="" async defer></script>
