--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,14 +17,20 @@
     <link rel="stylesheet" href="">
   </head>
   <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
     <div>Microblog: 
       <a href='/index'>Home</a>
       <a href='/login'>Login</a>
     </div>
     <hr>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+      {% for message in messages %}
+      <li>{{ message }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
     {% block content %}{% endblock %}
     <script src="" async defer></script>
   </body>
